# Openfabric-Science-Bot

./: main.py  pyproject.toml  responder.py  web_parser.py
datastore/: state.json
